# lstm-yandex-stocks

./: .gitignore  .pre-commit-config.yaml  README.md  YDEX.csv  YDEX.csv.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
lightning_logs/version_0/: metrics.csv
lightning_logs/version_0/checkpoints/: epoch=3-step=24.ckpt
lightning_logs/version_1/: metrics.csv
lightning_logs/version_1/checkpoints/: epoch=3-step=24.ckpt
lightning_logs/version_2/: metrics.csv
lightning_logs/version_2/checkpoints/: epoch=3-step=24.ckpt
lstm_for_yndx/: YDEX.csv  data.py  download_data.py  infer.py  model.py  model_full.pt  predict.py  train.py
lstm_for_yndx/lightning_logs/version_0/: metrics.csv
lstm_for_yndx/lightning_logs/version_0/checkpoints/: epoch=29-step=180.ckpt  epoch=29-step=990.ckpt  epoch=3-step=24.ckpt
lstm_for_yndx/lightning_logs/version_1/: hparams.yaml  metrics.csv
lstm_for_yndx/lightning_logs/version_1/checkpoints/: epoch=29-step=990.ckpt  epoch=3-step=24.ckpt
lstm_for_yndx/lightning_logs/version_2/: metrics.csv
lstm_for_yndx/lightning_logs/version_2/checkpoints/: epoch=29-step=180.ckpt
lstm_for_yndx/outputs/2025-06-05/17-33-55/.hydra/: config.yaml  hydra.yaml
lstm_for_yndx/outputs/2025-06-05/17-34-52/.hydra/: hydra.yaml
models/: model_full.pt  scaler.pt
predictions/: price_predictions.csv
